New Features
---------------------
* SOLR-14496: Solr CLI commands now can interact with a Solr secured using Basic Authentication.  (Eric Pugh)

* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and
  applied to new replicas, available for use as property substitution in configuration files.  (Vincent Primault)

Improvements
---------------------
* SOLR-16924: RESTORECORE now sets the UpdateLog to ACTIVE state instead of requiring a separate
  REQUESTAPPLYUPDATES call in Collection restore.  (Julia Lamoine, David Smiley)

* SOLR-16907: Fail when parsing an invalid custom permission definition from security.json (janhoy, Uwe Schindler)

* SOLR-17046: SchemaCodecFactory is now the implicit default codec factory.  (hossman)

* SOLR-16397: Swap core v2 endpoints have been updated to be more REST-ful.
  SWAP is now available at `POST /api/cores/coreName/swap` (Sanjay Dutt via Jason Gerlowski)

* SOLR-17011: Add tracing spans to internal collection commands (Alex Deparvu)

* SOLR-17041: Make CommitTracker currentTlogSize lazy (Alex Deparvu)

* SOLR-16397: The rename-core v2 endpoint has been updated to be more REST-ful.
  RENAME is now available at `POST /api/cores/coreName/rename` (Sanjay Dutt via Jason Gerlowski)

* SOLR-17035: Add trace id to jetty thread names to improve debuggability via stack traces (Alex Deparvu)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
* SOLR-6853: Allow '/' characters in the text managed by Managed Resources API. (Nikita Rusetskii via Eric Pugh)

* SOLR-17039: Entropy calculation in bin/solr script fails in Docker due to missing 'bc' cmd (janhoy)

* SOLR-17045: DenseVectorField w/ vectorDimension > 1024 now work automatically with _default configset, due to
  implicit use of SchemaCodecFactory.  (hossman)

Dependency Upgrades
---------------------
* SOLR-17012: Update Apache Hadoop to 3.3.6 and Apache Curator to 5.5.0 (Kevin Risden)
