@@ -18,7 +18,6 @@
 package org.apache.solr.cluster.placement;
 
 import org.apache.solr.api.ConfigurablePlugin;
-import org.apache.solr.cluster.placement.plugins.SimplePlacementFactory;
 
 /**
  * Factory implemented by client code and configured in container plugins (see {@link
@@ -37,9 +36,6 @@ public interface PlacementPluginFactory<T extends PlacementPluginConfig>
    * Returns an instance of the plugin that will be repeatedly (and concurrently) called to compute
    * placement. Multiple instances of a plugin can be used in parallel (for example if configuration
    * has to change, but plugin instances with the previous configuration are still being used).
-   *
-   * <p>If this method returns null then a simple default assignment strategy will be used (see
-   * {@link SimplePlacementFactory}).
    */
   PlacementPlugin createPluginInstance();
 
